:sparkles: fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,6 @@ h2 {
 
 .button {
   width: 250px;
-  margin: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,6 +80,7 @@ div.hero__text > h1 {
 div.hero__text > p {
   font-size: 24px;
   margin-top: 20px;
+  margin-bottom: 35px;
   max-width: 550px;
 }
 
@@ -108,6 +108,7 @@ div.hero > img {
 
 /* Navmap */
 .navmap {
+  padding-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -212,8 +213,7 @@ div.hero > img {
 .cta > h2 {
   font-weight: 600;
   width: 60%;
-  font-size: 28px;
-  line-height: 48px;
+  font-size: calc(24px + .5vw);
   letter-spacing: -0.01em;
   text-decoration-line: underline;
   color: #FFFFFF;
